mortgage-calculator/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortgage-calculator-service
  namespace: default
spec:
  selector:
    app: mortgage-calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
