mortgage-calculator/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mortgage-calculator-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mortgage-calculator.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mortgage-calculator-service
                port:
                  number: 8080
